singularity/jobs/bak/error2270536.err
  File "eval.py", line 122
    print('testloader size': )
                           ^
SyntaxError: invalid syntax
